--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^9.0.2",
     "next": "16.0.10",
     "next-intl": "^4.6.1",
+    "nodemailer": "^7.0.12",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-globe.gl": "^2.37.0",
@@ -28,6 +29,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/topojson-client": "^3.1.5",
